--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
 	  "start": "node app.js"
   },
+ "repository":{
+	 "type": "git",
+	"url": "git+https://github.com/abhishekdwaghmare2000/photowebsite11.git"
+ },
    "engines": {
     "node": "= 12.18.3",
     "npm": "= 6.14.8"
