--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   },
   "author": "Abhishek Waghmare",
   "license": "ISC",
+   "bugs": {
+    "url": ""
+  },
   "dependencies": {
     "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
