--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
 	  "start": "node app.js",
 	   "build": "ng build",
-           "heroku-postbuild": "ng build --prod
+           "heroku-postbuild": "ng build --prod"
   },
  "repository":{
 	 "type": "git",
