--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "connect-flash": "^0.1.1",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
+    "moment": "^2.27.0",
     "express-session": "^1.17.1",
     "method-override": "^3.0.0",
     "mongodb": "^3.6.0",
